--- a/3-introweb/html/Index.html
+++ b/3-introweb/html/Index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Encabezado 1</h1>
+<hr>
+    <h1>Página principal</h1>
     <h2>Encabezado 2</h2>
     <h3>Encabezado 3</h3>
     <h4>Encabezado 4</h4>
@@ -17,18 +17,27 @@
     <hr/>
 
     <h3></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        <p id="parrafo1">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Vitae accusantium quidem repellat soluta error, repudiandae 
             modi praesentium optio facere alias, voluptatem debitis est 
             esse enim aspernatur aperiam iste numquam necessitatibus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        <p id="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Quas atque dicta voluptates fuga ullam voluptate eaque magni sed dolore.
                  Aspernatur fugiat sequi accusantium! 
                 Itaque, magni sint porro autem odit rerum.</p>
                 <hr/>
-      <ir href="https://google.com/" target="_blank"></ir>ir a google></a>
+      <a href="https://google.com/"
+       target="_blank">ir a google</a>
       <br>
+       <a href="mailto:raul@gmail.com">enviar correo</a>
       <br>
-
-</body>
+       <a href="tel:+525520453615">llamar a</a>
+       <br>
+       <hr2>final de la pagina</hr2> 
+       <br>
+       <a href="assets/pages/pagina2.html">ir a pagina 2</a>
+      <br>
+      <a href="#parrafo1">Ir a parrafo1</a>
+    </body>
+<h1>Página 2</h1>
 </html>
