subo archivos del día 27-07-2022

--- a/3-introweb/mi proyecto html Cv/index.html
+++ b/3-introweb/mi proyecto html Cv/index.html
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi CV</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <center style="color: aliceblue;">Mi Cv</center>
-    <h4 style="color:aliceblue">Nombre: Aarón Caleb Ulloa Gómez</h4>
-    <h4 style="color: aliceblue;">Desarrollador java full stack</h4>
+   <div class="contenedor">
+      <div class="">
+        <h2>Aarón Caleb Ulloa Gómez</h2>
+        <h2>Desarrollador Java Full Stack</h2>
+        <ul>
+            <li>Calle: Benito Júarez con esquina 21 de marzo, Colonia Lázaro Cardenas #25</li>
+            <li>Metepec, Estado de México.</li>
+            <li>Telefono: 7731236852</li>
+            <li>Correo: simiuc0@gmail.com</li>
+        </ul>
+    </div>
+       
+   <p class="borde"></p>
+   <div>
+    <h2>Experiencia Laboral</h2>
+    <ul>
+        <li>Ayudante de Ingeniero Informático</li>
+        <li>Subjefe de Sucursal en Farmacias Similares</li>
+        <li>Reparación y mantenimiento a equipo de compúto</li>
+    </ul>
+   </div>
+   <p class="borde"></p>
+   <div>
+    <h2>Lenguajes de Programación que conozco</h2>
+    <div class="imagelenguajes">
+        <img src="img/Unofficial_JavaScript_logo_2.svg (1).png" alt="">
+        <img src="img/8912d-java-logo (1).png" alt="">
+        <img src="img/1200px-Python.svg (1).png" alt="">
+    </div>
+    <div class="Lenguajes">
+        <p>JavaScript</p>
+        <p>Java</p>
+        <p>Python</p>
+    </div>
+    <p class="borde"></p>
+    <div>
+        <h2>Conocimientos y Experiencia Laboral</h2>
+        <p>Tengo conocimientos en los lenguajes antes mostrados, aprendí algunas cosas a través de la herramienta
+            llamada Youtube, he asistido a bootcamps, leido libros, y practicando algunos ejercicios por mi cuenta,
+            tengo conocimientos sobre reparar equipo de computo, quitar virus, formatear pc y reinstalar el sistema operativo
+            particiones del disco duro e instalación de programas, cambiar display, disco duro y memoria ram.
+        </p>
+    </div>
+   </div>
+  </div> 
+
 </body>
 </html>
