--- a/3-Javascript/js-03/index.html
+++ b/3-Javascript/js-03/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="assets/js/function-3.js"></script>
-    <!--<script src="assets/js/function-2.js"></script>-->
-    <!--  <script src="assets/js/function-1.js"></script>-->
+    
+    <script src="assets/js/main.js"></script>
+    <!--<script src="assets/js/app.js"></script>-->
 </body>
 </html>
