--- a/ejercicios-codigo/index.html
+++ b/ejercicios-codigo/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Casa de tauro</title>
 </head>
 <body>
-    <script src="assets/js/function-3.js"></script>
-    <!--<script src="assets/js/function-2.js"></script>-->
-    <!--  <script src="assets/js/function-1.js"></script>-->
+    <script src="assets/js/casa-cancer.js"></script>
 </body>
 </html>
