subo archivos del dia 12-08-2022

--- a/3-Javascript/js-07/poke.html
+++ b/3-Javascript/js-07/poke.html
@@ -40,11 +40,10 @@
       <div class="row mt-5">
         <div class="col">
             <div class="card text-center" style="width: 18rem;">
-            <img id="img-pokemon" src="https://i.pinimg.com/originals/3a/c1/c1/3ac1c10512807f6f820abf7dd2f1fa01.png" class="card-img-top" alt="...">
+            <img id="img-pokemon" src="" class="card-img-top" alt="...">
             <div class="card-body">
-            <p id="id-pokemon" class="card-text">ID: 152</p>
-            <h4>chikorita</h4>
-             
+             <p id="id-pokemon" class="card-text"></p>
+            <h4 id="nombre-pokemon"></h4>
             </div>
           </div>
         </div>
@@ -53,9 +52,12 @@
             <div class="card-header bg-primary">
               Habilidades
             </div>
-            <ul class="list-group list-group-flush">
+            <ul class="list-group list-group-flush" id="lista-habilidades">
               <li class="list-group-item">An item</li>
               <li class="list-group-item">A second item</li>
+              <li class="list-group-item">A third item</li>
+              <li class="list-group-item">A third item</li>
+              <li class="list-group-item">A third item</li>
               <li class="list-group-item">A third item</li>
             </ul>
           </div>
